css/styles.css
#entirePage {
    width: 70%;
    margin: 0 auto;
}

#header {
    text-align: center;
    color: #f3f3f3;
    background-color: #0471f4;
    font-family: Arial, Helvetica, sans-serif;
}

#studentName {
    padding-top: .3em;
    padding-bottom: .3em;
}

#familyPicture img {
    width: 12.5%;
    height: auto;
    position: absolute;
    margin-left: 55%;
    top: 25px;
    box-shadow:-8px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#body {
    font-family: Arial, Helvetica, sans-serif;
}
#body h2 {
    border-bottom-style: solid;
    border-bottom-color: #c1c1c1;
    border-bottom-width: 2px;
    margin-right: 10%;
}

#footer {
    color: #f3f3f3;
    background-color: #0471f4;
    padding-top: .3em;
    padding-bottom: .3em;
    text-align: center;
    font-size: .75em;
    font-family: Arial, Helvetica, sans-serif;
}

#footer a:link {
    color: #f3f3f3;
}

#footer a:visited {
    color: #f3f3f3;
}

#footer a:hover {
    color: #000000;
}

#lastModified {
    font-size: .5em;
}

#test {
    font-size: .8em;
}

